# drake

./: .gitignore  CMakeLists.txt  WORKSPACE
common/proto/: call_python_client.py
drake_build_cwd/: WORKSPACE.bazel
examples/gcs/: BUILD.bazel  diamond_example.cc  square_example.cc  unit_box_example.cc
examples/gcs/manipulation/: BUILD.bazel  iiwa_common.cc  iiwa_lcm.cc  kuka_torque_controller.cc  single_arm.cc
examples/gcs/manipulation/models/: iiwa14_spheres_collision_welded_gripper.yaml
examples/gcs/manipulation/models/room_gen/: building.sdf
examples/scora/: BUILD.bazel  ufo_obstacle.cc  ufo_obstacle_simplified.cc  ufo_obstacle_simplified_bezier.cc  ufo_obstacle_simplified_bezier_auxiliary.cc  ufo_obstacle_simplified_bezier_auxiliary_chance.cc  ufo_obstacle_simplified_bezier_auxiliary_chance_multiple.cc  ufo_obstacle_simplified_gcs.cc  ufo_obstacle_simplified_gcs_mindist.cc  ufo_obstacle_simplified_gcs_postproc.cc  ufo_obstacle_simplified_kintrajopt.cc
examples/scora/ProximityAlert/: BUILD.bazel  CMakeLists.txt  cutoffSphere.h  proximityAlert.h  proximityAlertUtils.h  shadows.cpp
examples/scora/ccopt/: BUILD.bazel  CMakeLists.txt  bezier_min_dist_constraint.cc  bezier_min_dist_constraint.h  bullet_world_manager.cpp  bullet_world_manager.h  cc_opt_runner.cpp  chance_constraints.cpp  chance_constraints.h  geometry_set_tester.h  joint_chance_constraints.cpp  joint_chance_constraints.h  utils.cpp  utils.h
examples/scora/examples/: CMakeLists.txt  arm_moving_obstacle.cc  car_all_uncertainty_chekov.cc  car_all_uncertainty_trajopt.cc  car_fixed.cc  car_obstacle_uncertainty_ira.cc  car_obstacle_uncertainty_trajopt.cc  drake_example.cc  four_arms_moving_obstacle.cc  hw_demo.cc  mobile_arm_all_uncertainty_chekov.cc  mobile_arm_all_uncertainty_trajopt.cc  mobile_arm_all_uncertainty_trajopt_bench.cc  mobile_arm_fixed.cc  plan.json  simple_arm.cc  three_arms_moving_obstacle.cc  two_arms_moving_obstacle.cc  ufo_benchmarking_conservatism.cc  ufo_benchmarking_cost.cc  ufo_benchmarking_generic.cc  ufo_benchmarking_obstacles.cc  ufo_benchmarking_tunnel.cc  workstation_deterministic_trajopt.cc  workstation_obstacle_uncertainty_trajopt.cc
examples/scora/json_interface/: agent_block.json  agents.json  agents_3.json  exogenous_moving_block.json  exogenous_moving_robot.json  plan_out.json
examples/scora/json_interface/airbus/: agents.json  agents2-6.json  exogenous.json  plan_out.json
examples/scora/models/: 6dof_movable_box_base_link.urdf  bolt_frame.urdf  box.urdf  car.urdf  car_obstacle_course.urdf  conveyor.urdf  conveyor_with_block.urdf  empty.urdf  hw_demo_env.urdf  iiwa14_primitive_collision.urdf  melo.urdf  movable_base_obstacle_course.urdf  movable_box_base_link.urdf  movable_box_point.urdf  moving_base_iiwa14_primitive_collision.urdf  obstacle_course.urdf  obstacle_course_simplified.urdf  rs010n.urdf  rs010n_holding_part.urdf  tunnel.urdf  wam_primitive_collision.urdf  workstation.urdf
examples/scora/models/component_meshes/: gear.stl
examples/scora/models/iiwa_meshes/: LICENSE.TXT
examples/scora/models/melo_meshes/: J1.stl  J2.stl  J3.stl  J4.stl  J5.stl  J6.stl  base_link.stl  support.stl  track.stl
examples/scora/models/melo_meshes/old_STLs/: link3.stl  link4.stl  link5.stl  link6.stl  support.stl
examples/scora/models/rs010n_meshes/: base.stl  bicep.stl  elbow.stl  forearm.stl  swivel.stl  tool_mount.stl  wrist.stl
examples/scora/models/wam_meshes/: FifthLink.STL  FourthLink.STL  LICENSE.txt  SecondLink.STL  SeventhLink.STL  SixthLink.STL  ThirdLink.STL  bhand_base.STL  bhand_link1.STL  bhand_link2.STL  bhand_link3.STL
examples/scora/src/: CMakeLists.txt
geometry/optimization/: graph_of_convex_sets.cc  graph_of_convex_sets.h
planning/trajectory_optimization/: BUILD.bazel  gcs_trajectory_optimization.cc  gcs_trajectory_optimization.h
tools/: ubuntu-focal.bazelrc
